fix: fxing the shifting of layout due to 100vw width

--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -1,6 +1,6 @@
 nav {
   position: sticky;
-  width: 100vw;
+  width: 100%;
   top: 0;
   z-index: 99999;
   height: 60px;
